# pelusa-server

./: .pre-commit-config.yaml  README.md  docker-compose.ci.yml  docker-compose.yml  env-template
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: pre-commit.yaml  test.yaml
backend/: pyproject.toml
backend/alembic/versions/: 19dec93a1188_update_users_table.py  8076b51bffa5_create_prediction_table.py
backend/app/api/: __init__.py  predictions.py  utils.py
backend/app/core/: config.py
backend/app/ml/data/: phishing_dataset.csv
backend/app/ml/features/: analyzer.py  top_features.py
backend/app/ml/notebooks/: train.ipynb
backend/app/models/: __init__.py  prediction.py  user.py
backend/app/schemas/: healthy.py  prediction.py
backend/tests/: conftest.py
backend/tests/api/: test_predictions.py  test_utils.py
backend/tests/models/: test_prediction.py
