[tool.poetry]
name = "pelusa-backend"
version = "0.1.0"
description = "Pelusa (Predictive Engine for Legitimate & Unverified Site Assessment) is a machine learning based application that predicts the legitimacy of a website based on the URL provided. It is built using FastAPI and PostgreSQL, deployed with Docker Compose."
authors = ["javi-aranda"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^1.10.12"
requests = "^2.31.0"
alembic = "^1.11.3"
psycopg2-binary = "^2.9.8"
asyncpg = "^0.28.0"
SQLAlchemy = "^2.0.21"
gunicorn = "^21.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
tqdm = "^4.65.0"
tldextract = "^3.5.0"
idna = "^3.4"
matplotlib = "^3.7.3"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.0"
ipython = "^8.16.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
