[tool.poetry]
name = "pelusa-backend"
version = "0.1.0"
description = "Pelusa (Predictive Engine for Legitimate & Unverified Site Assessment) is a machine learning based application that predicts the legitimacy of a website based on the URL provided. It is built using FastAPI and PostgreSQL, deployed with Docker Compose."
authors = ["javi-aranda"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^1.10.0"
requests = "^2.31.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.23"
gunicorn = "^21.2.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
tqdm = "^4.65.0"
tldextract = "^5.0.1"
idna = "^3.4"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
seaborn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
ipython = "^8.17.2"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
ipdb = "^0.13.13"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cruft]
skip = [".env"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
